# __ngc5pm__

./: .gitignore  Cargo.toml
backend/apps/api/: Cargo.toml
backend/apps/api/src/: main.rs
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: error.rs  lib.rs
backend/crates/auth/src/application/: check_session.rs  config.rs  mod.rs  sign_in.rs  sign_out.rs  sign_up.rs  totp_setup.rs
backend/crates/auth/src/domain/: mod.rs  repository.rs
backend/crates/auth/src/domain/entity/: auth.rs  auth_session.rs  mod.rs  user.rs  user_details.rs
backend/crates/auth/src/domain/value_object/: email.rs  mod.rs  public_id.rs  random_art.rs  totp_secret.rs  user_id.rs  user_name.rs  user_password.rs  user_role.rs  user_status.rs
backend/crates/auth/src/infra/: mod.rs  postgres.rs
backend/crates/auth/src/presentation/: dto.rs  handlers.rs  middleware.rs  mod.rs  router.rs
backend/crates/platform/: Cargo.toml
backend/crates/platform/src/: client.rs  config.rs  cookie.rs  crypto.rs  lib.rs  password.rs  rate_limit.rs
backend/crates/pow/: Cargo.toml
backend/crates/pow/src/: error.rs  lib.rs  tests.rs
backend/crates/pow/src/application/: check_session.rs  config.rs  issue_challenge.rs  mod.rs  submit_solution.rs
backend/crates/pow/src/domain/: entities.rs  mod.rs  repository.rs  services.rs  value_objects.rs
backend/crates/pow/src/infra/: mod.rs  postgres.rs
backend/crates/pow/src/presentation/: dto.rs  handlers.rs  middleware.rs  mod.rs  router.rs
backend/crates/shared/: Cargo.toml
backend/crates/shared/src/: id.rs  lib.rs
backend/crates/shared/src/error/: app_error.rs  conversions.rs  kind.rs
backend/observability_test/: Cargo.toml
backend/observability_test/src/: lib.rs  main.rs
database/migrations/: 20241216_001_create_pow_challenges.sql  20241217_001_create_auth_tables.sql  20241219_001_create_user_details.sql
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/routes/: IndexPage.tsx
frontend/src/features/pow/api/: powApi.ts  types.ts
frontend/src/features/pow/components/: PixelScene.tsx  PowGate.tsx  PowOverlay.tsx
frontend/src/features/pow/hooks/: usePow.ts
frontend/src/features/pow/session/: LocalStoragePowSessionStore.ts  types.ts
frontend/src/features/pow/ui/: DayCycleIllustration.tsx  pow.css  powMetricPaper.css
frontend/src/features/pow/worker/: pow.worker.ts  workerClient.ts
frontend/src/styles/: global.css
