[workspace]
resolver = "3"
members = [
    "backend/apps/api",
    "backend/crates/shared",
    "backend/crates/platform",
    "backend/crates/pow",
    "backend/observability_test",
    "backend/crates/auth",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
trait-variant = "0.1.2"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Tracing / Logging
tracing = "0.1.43"
