[package]
name = "observability_test"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web
axum = "0.8.7"
tokio = { workspace = true }
tower-http = { version = "0.6.7", features = ["trace"] }

# JSON
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Logging/Tracing
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Metrics
prometheus = "0.14.0"
lazy_static = "1.5.0"

# OpenTelemetry (OTLP)
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32.0"

# Error handling
anyhow = "1.0.100"
