[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
platform = { path = "../platform" }
kernel = { path = "../shared", features = ["sqlx", "axum"] }

# Web framework
axum = { version = "0.8.7", features = ["macros"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }

# Cryptography
sha2 = "0.10"
rand = "0.9.2"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Unicode normalization
unicode-normalization = "0.1.25"

# Tracing / Logging
tracing = { workspace = true }
