[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
platform = { path = "../platform" }
kernel = { path = "../shared", features = ["sqlx", "axum"] }

# Web framework
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { workspace = true }
trait-variant = { workspace = true }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }

# Cryptography
sha2 = "0.10"
sha3 = "0.10.8"
rand = "0.9.2"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
nid = { version = "3.0.0", features = ["serde"] }
totp-rs = { version = "5.6", features = ["qr", "gen_secret"] }
hmac = "0.12"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Unicode normalization
unicode-normalization = "0.1.25"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0.17"

# Tracing / Logging
tracing = { workspace = true }

# HTTP types
http = "1.4.0"

# derive_more for Display macro
derive_more = { version = "2.0.1", features = ["display"] }
