[package]
name = "platform"
version = "0.1.0"
edition = "2024"

[dependencies]
# Cryptography
sha2 = "0.10.9"
sha1 = "0.10"
rand = "0.8"                                         # Use 0.8 for compatibility with argon2/password-hash
base64 = "0.22.1"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }

# Web framework (for cookie/header types)
axum = "0.8.7"
http = "1.4.0"

# Unicode normalization
unicode-normalization = "0.1"

# HTTP client for HIBP API
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }

# Async
tokio = { workspace = true }
trait-variant = { workspace = true }

# Error handling
thiserror = "2.0"

[dev-dependencies]
hex = "0.4.3"
