[package]
name = "pow"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
platform = { path = "../platform" }
kernel = { path = "../shared", features = ["sqlx", "axum"] }

# Web framework
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { workspace = true }
trait-variant = { workspace = true }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptography
sha2 = "0.10"
rand = "0.9.2"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Tracing / Logging
tracing = { workspace = true }

# HTTP types
http = "1.4.0"

[dev-dependencies]
tokio-test = "0.4"
hex = "0.4"
