[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.19.0", features = ["v4"] }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Optional database support
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
], optional = true }

# Optional HTTP framework support
axum = { version = "0.8.7", optional = true }
http = { version = "1.4.0", optional = true }

[features]
default = []
sqlx = ["dep:sqlx"]
axum = ["dep:axum", "dep:http"]
full = ["sqlx", "axum"]

[dev-dependencies]
